--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,9 @@ repository               : "ZhewenZhang2333/zhewenzhang2333.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  name             : "Zhewen Zhang"
+  location         : "Shenzhen, Guangdong, China"
+  email            : "zhewenzhang2017@gmail.com"
 
   # Academic websites
   academia         : # URL
@@ -50,7 +46,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "ZhewenZhang2333"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -137,7 +133,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : 
 facebook:
   username               :
   app_id                 :
@@ -147,9 +143,9 @@ og_description           :  # Social media default site image description
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  type                   : "Person" # Person or Organization (defaults to Person)
+  name                   : "Zhewen Zhang" # If the user or organization name differs from the site's name
+  links: "https://github.com/ZhewenZhang2333" # An array of links to social media profiles
 
 
 # Analytics
