--- a/_config.yml
+++ b/_config.yml
@@ -1,84 +1,94 @@
-# =====================================================
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your entire site, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# `jekyll serve -l -H localhost`. If you change this file, please restart the
+# server process.
+
 # Basic Site Settings
-# =====================================================
-locale: "en-US"
-site_theme: "default"
+locale                   : "en-US"
+site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
+title                    : "Zhewen Zhang"
+title_separator          : "-"
+name                     : &name "Zhewen Zhang"
 
-title: "Zhewen Zhang"
-title_separator: "-"
-name: &name "Zhewen Zhang"
-
-description: &description >
+# ⚠️ 关键：用 > 时，内容必须换行并缩进（避免你这次 build 报错）
+description              : &description >
   AI Researcher and PhD Applicant with research interests in
-  Natural Language Processing, Computer Vision, and Large Language Models.
+  Natural Language Processing (NLP), Computer Vision (CV), and Large Language Models (LLMs).
 
-# GitHub Pages user page
-url: "https://zhewenzhang2333.github.io"
-baseurl: ""
-repository: "ZhewenZhang2333/zhewenzhang2333.github.io"
+# ⚠️ 关键：User Page 用这个 url/baseurl 组合
+url                      : "https://zhewenzhang2333.github.io"
+baseurl                  : ""
 
-# =====================================================
-# Site Author (Sidebar Profile)
-# =====================================================
+# ⚠️ 关键：改成你自己的仓库（大小写不敏感，但建议一致）
+repository               : "ZhewenZhang2333/zhewenzhang2333.github.io"
+
+# Site Author - The following control what appear as part of the author content on the side bar.
+#               If a field is blank the icon and link will not appear, otherwise it will be shown.
+#               Additional customization can be done by editing /_includes/author-profile.html
 author:
-  avatar: "profile.png"
-  name: "Zhewen Zhang"
-  location: "Shenzhen, Guangdong, China"
-  uri: "https://zhewenzhang2333.github.io"
-  email: "zhewenzhang2017@gmail.com"
+  # Biographic information
+  avatar           : "profile.png"
+  name             : "Zhewen Zhang"
+  pronouns         : # example: "she/her"
+  bio              : "AI Researcher & PhD Applicant. Interests: NLP, CV, and LLMs."
+  location         : "Shenzhen, Guangdong, China"
+  employer         : "SUSTech Affiliated High School"
+  uri              : "https://zhewenzhang2333.github.io"
+  email            : "zhewenzhang2017@gmail.com"
 
-  # Academic Profiles
-  academia: ""
-  arxiv: ""
-  googlescholar: "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  inspire-hep: ""
-  impactstory: ""
-  orcid: ""
-  semantic: ""
-  ssrn: ""
-  pubmed: ""
-  researchgate: ""
-  scopus: ""
-  zotero: ""
+  # Academic websites
+  academia         : # URL
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  inspire-hep      : # URL
+  impactstory      : # URL
+  orcid            : # URL (留空更专业，别填示例)
+  semantic         : # URL
+  ssrn             : # URL
+  pubmed           : # URL (留空，别用模板的 john snow 示例)
+  researchgate     : # URL
+  scopus           : # URL
+  zotero           : # URL
 
-  # Code & Development
-  bitbucket: ""
-  codepen: ""
-  dribbble: ""
-  github: "ZhewenZhang2333"
-  kaggle: ""
-  stackoverflow: ""
+  # Repositories and software development
+  bitbucket        : # Username - Update with your username on the site
+  codepen          : # Username
+  dribbble         : # Username
+  github           : "ZhewenZhang2333"
+  kaggle           : # Username
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
-  # Social Media (leave blank if none)
-  artstation: ""
-  bluesky: ""
-  facebook: ""
-  flickr: ""
-  foursquare: ""
-  goodreads: ""
-  google_plus: ""
-  keybase: ""
-  instagram: ""
-  lastfm: ""
-  linkedin: ""
-  mastodon: ""
-  medium: ""
-  pinterest: ""
-  soundcloud: ""
-  steam: ""
-  telegram: ""
-  tumblr: ""
-  twitter: ""
-  vine: ""
-  weibo: ""
-  wikipedia: ""
-  xing: ""
-  youtube: ""
-  zhihu: ""
+  # Social media
+  artstation       : # Username
+  bluesky          : # Username (不要填 bsky.app 这种占位)
+  facebook         : # Username
+  flickr           : # Username
+  foursquare       : # Username
+  goodreads        : # Username
+  google_plus      : # Username
+  keybase          : # Username
+  instagram        : # Username
+  lastfm           : # Username
+  linkedin         : # Username
+  mastodon         : # URL
+  medium           : # URL
+  pinterest        : # Username
+  soundcloud       : # Username
+  steam            : # Username
+  telegram         : # URL
+  tumblr           : # Username
+  twitter          : # Username for X / Twitter
+  vine             : # Username
+  weibo            : # Username
+  wikipedia        : # Username
+  xing             : # Username
+  youtube          : # Username
+  zhihu            : # Username
 
-# =====================================================
-# Publication Categories
-# =====================================================
+# Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
     title: "Books"
@@ -87,50 +97,196 @@ publication_category:
   conferences:
     title: "Conference Papers"
 
-# =====================================================
-# Site Behavior
-# =====================================================
-teaser: ""
-breadcrumbs: false
-words_per_minute: 160
-future: true
-read_more: "disabled"
-talkmap_link: false
-
+# Site Settings
+teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
+breadcrumbs              : false # true, false (default)
+words_per_minute         : 160
+future                   : true
+read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
+talkmap_link             : false      #change to true to add link to talkmap on talks page
 comments:
-  provider: ""
+  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  disqus:
+    shortname            :
+  discourse:
+    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+  facebook:
+    appid                :
+    num_posts            : # 5 (default)
+    colorscheme          : # "light" (default), "dark"
 
-# =====================================================
-# RSS / Feed
-# =====================================================
+staticman:
+  allowedFields          : ['name', 'email', 'url', 'message']
+  branch                 : "gh-pages" # "master", "gh-pages"
+  commitMessage          : "New comment."
+  filename               : comment-{@timestamp}
+  format                 : "yml"
+  moderation             : true
+  path                   : "_data/comments/{options.slug}"
+  requiredFields         : ['name', 'email', 'message']
+  transforms:
+    email                : "md5"
+  generatedFields:
+    date:
+      type               : "date"
+      options:
+        format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
+
 atom_feed:
-  hide: false
-  path: ""
+  hide                   : false     # change to true to hide the RSS feed in the footer
+  path                   : # blank (default) uses feed.xml
 
-# =====================================================
-# SEO
-# =====================================================
-google_site_verification: ""
-bing_site_verification: ""
-alexa_site_verification: ""
-yandex_site_verification: ""
+# SEO Related
+google_site_verification :
+bing_site_verification   :
+alexa_site_verification  :
+yandex_site_verification :
 
-# =====================================================
 # Social Sharing
-# =====================================================
 twitter:
-  username: ""
+  username               :
 facebook:
-  username: ""
-  app_id: ""
-  publisher: ""
+  username               :
+  app_id                 :
+  publisher              :
+og_image                 :  # Social media default site image
+og_description           :  # Social media default site image description
 
-og_image: ""
-og_description: ""
-
+# For specifying social profiles
+# - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type: "Person"
-  name: "Zhewen Zhang"
+  type                   : "Person"
+  name                   : "Zhewen Zhang"
   links:
     - "https://github.com/ZhewenZhang2333"
     - "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
+# Markdown Processing
+kramdown:
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+# These settings control the types of collections used by the template
+collections:
+  teaching:
+    output: true
+    permalink: /:collection/:path/
+  publications:
+    output: true
+    permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+  talks:
+    output: true
+    permalink: /:collection/:path/
+
+# These settings control how pages and collections are included in the site
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  # _teaching
+  - scope:
+      path: ""
+      type: teaching
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _publications
+  - scope:
+      path: ""
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
+  # _talks
+  - scope:
+      path: ""
+      type: talks
+    values:
+      layout: talk
+      author_profile: true
+      share: true
+
+# Sass/SCSS
+sass:
+  sass_dir: _sass
+  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+
+# Outputting
+permalink: /:categories/:title/
+timezone: Etc/UTC # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
+# Plugins
+plugins:
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-redirect-from
+  - jemoji
+
+# Mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-redirect-from
+  - jemoji
+
+# Archives
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
+
+# HTML Compression
+compress_html:
+  clippings: all
+  ignore:
+    envs: development
